Fixed search background in dark mode.

--- a/css/dc-compare.css
+++ b/css/dc-compare.css
@@ -134,7 +134,7 @@ body {
   font-size: .8em;
 }
 
-.select2-container input {
+.dark .select2-container input {
   background-color: #191919;
   color: #ccc;
 }
